add /estimatefee API
