# src/main.rs
@@ -30,12 +30,13 @@ use crate::error::AppError;
 use crate::ldk::stop_ldk;
 use crate::routes::{
     address, asset_balance, backup, btc_balance, change_password, close_channel, connect_peer,
-    create_utxos, decode_ln_invoice, decode_rgb_invoice, disconnect_peer, get_asset_media,
-    get_channel_id, init, invoice_status, issue_asset_cfa, issue_asset_nia, issue_asset_uda,
-    keysend, list_assets, list_channels, list_payments, list_peers, list_swaps, list_transactions,
-    list_transfers, list_unspents, ln_invoice, lock, maker_execute, maker_init, network_info,
-    node_info, open_channel, post_asset_media, refresh_transfers, restore, rgb_invoice, send_asset,
-    send_btc, send_onion_message, send_payment, shutdown, sign_message, sync, taker, unlock,
+    create_utxos, decode_ln_invoice, decode_rgb_invoice, disconnect_peer, estimate_fee,
+    get_asset_media, get_channel_id, init, invoice_status, issue_asset_cfa, issue_asset_nia,
+    issue_asset_uda, keysend, list_assets, list_channels, list_payments, list_peers, list_swaps,
+    list_transactions, list_transfers, list_unspents, ln_invoice, lock, maker_execute, maker_init,
+    network_info, node_info, open_channel, post_asset_media, refresh_transfers, restore,
+    rgb_invoice, send_asset, send_btc, send_onion_message, send_payment, shutdown, sign_message,
+    sync, taker, unlock,
 };
 use crate::utils::{start_daemon, AppState, LOGS_DIR};
 
@@ -100,6 +101,7 @@ pub(crate) async fn app(args: LdkUserInfo) -> Result<(Router, Arc<AppState>), Ap
         .route("/decodelninvoice", post(decode_ln_invoice))
         .route("/decodergbinvoice", post(decode_rgb_invoice))
         .route("/disconnectpeer", post(disconnect_peer))
+        .route("/estimatefee", post(estimate_fee))
         .route("/getassetmedia", post(get_asset_media))
         .route("/getchannelid", post(get_channel_id))
         .route("/init", post(init))
